# ChangeLog for media-video/linuxdvb
# Copyright 2003-2004 Martin Hierling; Distributed under the GPL-2
# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/media-tv/linuxtv-dvb/ChangeLog,v 1.10 2004/04/20 17:16:07 mad Exp $

  28 Mar 2004; Martin Hierling <martin@gentoo.org> :
  -h

*linuxtv-dvb-1.1.1 (28 Mar 2004)
  20 Apr 2004; Martin Hierling <mad@cc.fh-lippe.de>
  fixed damn f...ing typo KERNELRELEASE

  28 Mar 2004; Martin Hierling <mad@cc.fh-lippe.de>
  version bumb, nothing new

*linuxtv-dvb-1.1.0 (15 Feb 2004)
  15 Feb 2004; Martin Hierling <mad@cc.fh-lippe.de>
  new driver release, no modules.conf at the moment
  removed dvb_net scripts, added wrapper for modules.autoload

*linuxtv-dvb-1.0.1 (10 Dec 2003)
  10 Dec 2003; Florian Schilhabel <fernsehleo@gmx.net>
  Version Bump to r20031108

*linuxtv-dvb-1.0.1 (28 Oct 2003)
  01 Oct 2003; Martin Mittelsdorf <martini@vdr-portal.de>
  added patch for supporting remote-plugin as normal user

*linuxtv-dvb-1.0.1 (01 Oct 2003)
  01 Oct 2003; Martin Mittelsdorf <martini@vdr-portal.de>
  new dvb driver version 1.0.1

*linuxtv-dvb-1.0.0-r20030905 (21 Sep 2003)
  21 Sep 2003; Martin Hierling <mad@cc.fh-lippe.de>
  new dvb head version, removed splash due to lack of patch

*linuxtv-dvb-1.0.0 (07 Aug 2003)
  07 Aug 2003; Martin Hierling <mad@cc.fh-lippe.de>
  release 1.0.0

*linuxtv-dvb-1.0.0_pre3-r20030801 (04 Aug 2003)
  04 Aug 2003; Martin Hierling <mad@cc.fh-lippe.de>
  added stillimage prog and gentoo.mpg as splash screen
  for vdr

  04 Aug 2003; Martin Hierling <mad@cc.fh-lippe.de>
  moved from media-video to media-tv

  04 Aug 2003; Martin Hierling <mad@cc.fh-lippe.de>
  new cvs vsersion

*linuxtv-dvb-1.0.0_pre3-r20030608 (10 Jun 2003)
  04 Aug 2003; Martin Hierling <mad@cc.fh-lippe.de>
  moved from media-video to media-tv

  11 Jul 2003; Martin Hierling <mad@cc.fh-lippe.de>
  added a devfsd reload afer install

  10 Jun 2003; Martin Hierling <mad@cc.fh-lippe.de>