@@ -1,2 +1,2 @@
 MD5 6dd599f24b7abecd1e32c203eaa7fa8a linuxtv-dvb-1.1.1.tar.bz2 327271
-MD5 333cf531158ac5dd0db4665f3c83b040 dvb-ttpci-01.fw.gz 98111
+MD5 b8cba3504373852141759176fb6ab5b0 dvb-ttpci-01.fw 226408
