@@ -1,13 +1,13 @@
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/media-tv/linuxtv-dvb/linuxtv-dvb-1.1.1.ebuild,v 1.2 2004/04/20 17:16:07 mad Exp $
+# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/media-tv/linuxtv-dvb/linuxtv-dvb-1.1.1.ebuild,v 1.3 2004/05/04 17:26:08 fow0ryl Exp $
 
 DESCRIPTION="This is the standalone DVB driver for Kernel 2.4.x"
 HOMEPAGE="http://linuxtv.org/"
 
 SRC_URI="
 	http://linuxtv.org/download/dvb/${P}.tar.bz2
-	http://www.linuxtv.org/download/dvb/dvb-ttpci-01.fw.gz"
+	http://www.linuxtv.org/download/dvb/dvb-ttpci-01.fw"
 	
 LICENSE="GPL-2"
 SLOT="1"
@@ -19,10 +19,11 @@ DEPEND="
 		!media-video/linuxdvb"
 
 RDEPEND="virtual/glibc"
-KERNELRELEASE=$(/bin/uname -r)
+#KERNELRELEASE=$(/bin/uname -r)
 
 pkg_setup() { 
-		if [ -z "$(modinfo -n input 2>/dev/null)" -o -z "$(modinfo -n evdev 2>/dev/null)" ]; then
+	
+	if [ -z "$(modinfo -n input 2>/dev/null)" -o -z "$(modinfo -n evdev 2>/dev/null)" ]; then
 		ewarn
 		ewarn "If something goes wrong, make sure you have evdev,video, i2c and "
 		ewarn "input support in your kernel. Check your kernelconfiguration"
@@ -32,7 +33,8 @@ pkg_setup() {
 		ewarn
 	fi
 
-	if [ -r /lib/modules/${KERNELRELEASE}/misc/videodev.o ]; then
+#	if [ -r /lib/modules/${KERNELRELEASE}/misc/videodev.o ]; then
+	if [ -r /lib/modules/${KV}/misc/videodev.o ]; then
 		ewarn
 		ewarn "There is a stale /lib/modules/${KERNELRELEASE}/misc/videodev.o."
 		ewarn "Probably from a previous installation of this driver. Make sure you"
@@ -49,7 +51,8 @@ src_unpack() {
 }
 
 src_compile() {
-	cp ${S}/../dvb-ttpci-01.fw ${S}/build-2.4 || die "fw copy problem"
+	cp ${DISTDIR}/dvb-ttpci-01.fw ${S}/build-2.4 || die "fw copy problem"
+#	cp ${S}/../dvb-ttpci-01.fw ${S}/build-2.4 || die "fw copy problem"
 	cd ${S}/build-2.4
 	make || die "compile problem"
 }
