@@ -1,11 +1,15 @@
 # ChangeLog for media-video/linuxdvb
 # Copyright 2003-2004 Martin Hierling; Distributed under the GPL-2
-# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/media-tv/linuxtv-dvb/ChangeLog,v 1.10 2004/04/20 17:16:07 mad Exp $
+# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/media-tv/linuxtv-dvb/ChangeLog,v 1.11 2004/05/04 17:26:07 fow0ryl Exp $
 
   28 Mar 2004; Martin Hierling <martin@gentoo.org> :
   -h
 
 *linuxtv-dvb-1.1.1 (28 Mar 2004)
+  24 Apr 2004; Henning Ryll <henning.ryll@web.de>
+  changed KERNELRELEASE to KV
+  fixed firmware download 
+
   20 Apr 2004; Martin Hierling <mad@cc.fh-lippe.de>
   fixed damn f...ing typo KERNELRELEASE
 
